[tool.poetry]
name = "hw-9"
version = "0.1.0"
description = ""
authors = ["OleksandrChorniy <sahacherniy94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
scrapy = "^2.11.0"
scrapyscript = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
